2010-10-22  Kevin Kenny  <kennykb@acm.org>

	* support/installation/modules.tcl: Corrected installation
	of grammar::aycock.
	
2010-10-18  Kevin Kenny  <kennykb@acm.org>

	* modules/grammar_aycock: New module, Aycock-Earley-Horspool
	parser generator.
	
2010-10-08  Andreas Kupries  <andreask@activestate.com>

	* modules/pki: New module, public key infrastructure.
	* support/installation/modules.tcl:

2010-07-09  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl: [Bug 3027371]. Fixed typo
	  'imap' -> 'imap4'. Thanks to Larry Virden <lvirden@users.sf.net>
	  for reporting.

2010-07-08  Andreas Kupries  <andreask@activestate.com>

	* modules/gpx: New module 'gpx'.
	* support/installation/modules.tcl:

2010-07-06  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl: Module 'imap4' activated.

2010-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* New module 'pt', for ParserTools. Requires Tcl 8.5. Supercedes
	  grammar_peg, grammar_me, and page.

2009-12-08  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/test/run.tcl (CaptureFailureCollectBody,
	  CaptureFailureCollectError): Fixed issue with test result
	  capture on failure. We failed on the capture of failure due to
	  unexpected return codes, because the output syntax is different
	  for that compared to failure due to result differences. Code has
	  been added to recognize and capture this other syntax.

	* support/devel/sak/test/run.tcl: Extended the test framework to
	* support/devel/all.tcl: record time per .test file, count of
	  tests per file, enabling it to compute a speed (microseconds per
	  test), as a rough and crude benchmark of where we may have
	  performance problems with either packages or tests.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-12-03  Andreas Kupries  <andreask@activestate.com>
